# IARC_13

./: README.md  README.md~
src/: my.launch  test.launch
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/bagfiles/: 2014-03-12-13-44-08.bag
src/beginner_tutorials/launch/: turtlemimic.launch
src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  xu2meL.cpp  xu2meL2T.cpp  xu2meLRT.cpp  xu2meT.cpp
src/height_laser/: CMakeLists.txt
src/height_laser/src/: height_read.cpp
src/irobot_tracker/: 2  CMakeLists.txt  CMakeLists.txt~  camera_param.xml  package.xml
src/irobot_tracker/meshes/: 1.stl  myplain.stl.old
src/irobot_tracker/msg/: trackerDebug.msg
src/irobot_tracker/src/: .SRUKF_controller.cpp.swp  .pid.cpp.swp  IrobotDetector.cpp  IrobotDetector.cpp~  IrobotDetector.h  IrobotDetector.h~  PlainBase.cpp  PlainBase.h  SRUKF.cpp  SRUKF_controller.cpp  SRUKF_twoLinearH.cpp  aruco_tracker.cpp  aruco_tracker.cpp~  neg_tracker_test.cpp~  pid.cpp  pos_estimator_main.cpp  tracker_debug_plot.cpp  uav_math.cpp  uav_math.cpp~  webcam_tracker.cpp
src/myuav_ctrl/: CMakeLists.txt  package.xml
src/myuav_ctrl/src/: faceUAV.cpp  serialUAV.cpp
src/opencvmarkdetect/: CMakeLists.txt  package.xml
src/opencvmarkdetect/launch/: 1.launch  2.launch  xu.launch
src/opencvmarkdetect/src/: Marker.cpp  Marker.h  MarkerDetector.cpp  MarkerDetector.h  Rvizlistener.cpp  listener.cpp  main.cpp  pointtest.cpp
src/opencvmarkdetect/urdf/: my2.urdf
src/read_web_cam/: CMakeLists.txt  CMakeLists.txt~
src/read_web_cam/launch/: asi.launch  webcamnew.launch  webcan_ar.launch
src/read_web_cam/src/: ASIRead.cpp  ASIReadcolor.cpp  ASIReadcolor.cpp~  publish.cpp
src/rviz_test/: CMakeLists.txt  package.xml
src/rviz_test/src/: RvizL.cpp  RvizL2T.cpp  RvizL2Ttest.cpp
src/serial_to_uav/: CMakeLists.txt
src/serial_to_uav/msg/: uav_ctrl.msg
src/serial_to_uav/src/: serial_FSM.cpp  serial_FSM.cpp~
src/ukftest/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/ukftest/launch/: my.launch  my.launch~  my_12.launch  my_12.launch~  my_12_noyaw.launch  my_12_noyaw.launch~  my_13.launch  my_13.launch~  my_13_noyaw.launch  my_b_laser.launch  my_b_laser.launch~  my_ct_neg.launch~  my_ct_negnode.launch~  my_hokuyo.launch~  my_neg_color.launch  my_neg_color.launch~  my_neg_ct.launch  my_neg_laser.launch  my_neg_laser.launch~  my_neg_marker.launch  my_neg_marker.launch~  my_newb_laser.launch  my_newb_laser.launch~  my_rplidar_test.launch  my_rplidar_test.launch~  my_state_ctrl.launch  my_state_ctrl.launch~  my_status2_ctrl.launch  my_status2_ctrl.launch~  my_status_ctrl.launch  my_status_ctrl.launch~  my_test_NEG.launch  my_test_NEG.launch~  my_test_cam.launch  my_test_cam.launch~  my_test_color.launch  my_test_color.launch~  my_test_ct.launch  my_test_hokuyo.launch  my_test_hokuyo.launch~  (+12 more)
src/ukftest/msg/: Ctrl.msg  Steer.msg  UAV.msg  avoidCtrl.msg  laserInfo.msg  laserInfo.msg~  laserPoint.msg  laserPoint.msg~  markerInfo.msg  markerInfo.msg~  randomCtrl.msg  trackCtrl.msg  trackInfo.msg  ukfData.msg  ukfData.msg~
src/ukftest/src/: NEGtracker.cpp  NEGtracker.cpp~  SRUKF.h~  neg_T_test_node.cpp  neg_T_test_node.cpp~  neg_marker_test_node.cpp  neg_marker_test_node.cpp~  odom_estimation.cpp  odom_estimation.cpp~  odom_estimation.h  odom_estimation.h~  odom_estimation_node.cpp  odom_estimation_node.cpp~  odom_estimation_node.h  odom_estimation_node.h~  simulate_imuvo_node.cpp  simulate_imuvo_node.cpp~  uav_controller.2cpp  uav_controller.cpp  uav_controller.cpp.save  uav_controller.cpp~  uav_controller_noyaw.cpp
src/urg_node/: CMakeLists.txt  CMakeLists.txt~
src/urg_node/src/: urg_node.cpp
src/vicon_bridge/: package000.xml
src/vicon_bridge/build2/: CMakeCache.txt
(+125 files in other folders)
